welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: not found: value isMon
			return isMon
                               ^